--- a/style.css
+++ b/style.css
@@ -1,1 +1,51 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Shrikhand&display=swap");
+.header {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 2rem;
+  align-items: center;
+  margin-top: 10px;
+}
+.header__logo {
+  height: 2rem;
+}
 
+.formulaire {
+  display: flex;
+  background-color: #EAEAEA;
+  align-items: center;
+  justify-content: center;
+  padding: 25px 603px 25px 603px;
+  height: 3rem;
+  margin-top: 10px;
+}
+
+input:disabled {
+  background: transparent;
+  border: transparent;
+  height: 40px;
+}
+input:disabled::placeholder {
+  color: black;
+  font-size: 18px;
+}
+
+.fa-map-marker-alt {
+  margin-right: 20px;
+  margin-bottom: 5px;
+}
+
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+}
+
+a {
+  text-decoration: none;
+}
