ajout présentation et footer

--- a/sass/layout/_form.scss
+++ b/sass/layout/_form.scss
@@ -1,21 +1,18 @@
 .formulaire {
-    display: flex;
+    @include flexbox;
     background-color: #EAEAEA;
-    align-items: center;
-    justify-content: center;
-    padding: 25px 603px 25px 603px;
-    height: 3rem;
+    @include height-3rem;
     margin-top: 10px;
 }
 
 input:disabled {
     background: transparent;
     border: transparent;
-    height: 40px;
+    @include height-3rem;
 
-    &::placeholder{
-    color: black;
-    font-size: 18px;
+    &::placeholder {
+    color: $color-black;
+    @include font-18px;
 }
 }
 
