--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,3 +1,9 @@
 $color-primaire : #9356DC;
 $color-secondaire: #FF79DA;
 $color-tertiaire: #99E2D0;
+
+$color-white: white;
+$color-shadow: #BBB;
+$color-sous-titre: #7D7D7D;
+$color-background: #F6F6F6;
+$color-black: black;
