--- a/style.css
+++ b/style.css
@@ -1,22 +1,30 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Shrikhand&display=swap");
 .header {
   display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 2rem;
+  justify-content: center;
+  text-align: center;
   align-items: center;
-  margin-top: 10px;
+  height: 2.5rem;
+  margin-top: 15px;
 }
 .header__logo {
-  height: 2rem;
+  height: 2.5rem;
+}
+.header__fleche-retour {
+  color: black;
+  position: absolute;
+  left: 10%;
+  font-size: 25px;
+  margin-top: -15px;
 }
 
 .formulaire {
   display: flex;
-  background-color: #EAEAEA;
-  align-items: center;
   justify-content: center;
-  padding: 25px 603px 25px 603px;
+  text-align: center;
+  align-items: center;
+  background-color: #EAEAEA;
   height: 3rem;
   margin-top: 10px;
 }
@@ -24,7 +32,7 @@
 input:disabled {
   background: transparent;
   border: transparent;
-  height: 40px;
+  height: 3rem;
 }
 input:disabled::placeholder {
   color: black;
@@ -34,6 +42,75 @@ input:disabled::placeholder {
 .fa-map-marker-alt {
   margin-right: 20px;
   margin-bottom: 5px;
+}
+
+.présentation {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #F6F6F6;
+  padding: 40px 0px 50px 0px;
+}
+.présentation__titre {
+  margin-bottom: 15px;
+}
+.présentation__sous-titre {
+  font-weight: 250;
+  font-size: 18px;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #353535;
+  padding: 40px 0px 60px 0px;
+  margin-top: 200px;
+}
+.footer__logo {
+  height: 2.5rem;
+  margin-bottom: 80px;
+}
+
+.liste {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding-bottom: 10px;
+  margin-left: 130px;
+}
+.liste__footer {
+  color: white;
+  margin-right: 130px;
+  font-size: 1.1rem;
+}
+
+.fa-utensils, .fa-hands-helping {
+  margin-right: 13px;
+  font-size: 15px;
+}
+
+.btn {
+  font-size: 16px;
+  width: 14rem;
+  border: none;
+  border-radius: 30px;
+  padding: 1rem;
+  color: white;
+  background: linear-gradient(#FF79DA, #9356DC);
+  box-shadow: 0px 5px 10px #BBB;
+  margin: 2rem auto 0 auto;
+  cursor: pointer;
+}
+.btn:hover {
+  filter: brightness(1.1);
 }
 
 * {
