--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -4,6 +4,12 @@ $color-tertiaire: #99E2D0;
 
 $color-white: white;
 $color-shadow: #BBB;
-$color-sous-titre: #7D7D7D;
 $color-background: #F6F6F6;
 $color-black: black;
+$color-gray: #EAEAEA;
+$color-form: #CBCBCB;
+$color-footer: #353535;
+$color-light-gray: #E2E2E2;
+$color-icons-fonctionnement: #7D7D7D;
+
+$background-form:linear-gradient($color-form -1%, $color-gray 7%);
