--- a/sass/composants/_buttons.scss
+++ b/sass/composants/_buttons.scss
@@ -9,7 +9,9 @@
     box-shadow: 0px 5px 10px $color-shadow;
     margin: 2rem auto 0 auto;
     cursor: pointer;
+    transition: transform 300ms, background-color 300ms;
         &:hover {
         filter: brightness(1.1);
+        transform: scale(1.05);
         }
 }
