--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
     @include flexbox;
     flex-direction: column;
-	background-color: #353535;
+	background-color: $color-footer;
     padding: 40px 0px 60px 0px;
     margin-top: 200px;
 	&__logo {
@@ -17,7 +17,7 @@
 	padding-bottom: 10px;
     margin-left: 130px;
     &__footer {
-        color: white;
+        color: $color-white;
         margin-right: 130px;
         font-size: 1.1rem;
     }
@@ -25,5 +25,5 @@
 
 .fa-utensils, .fa-hands-helping {
     margin-right: 13px;
-    font-size: 15px;
+    font-size: 1rem;
 }
