ajout cartes restaurent + correction fonctionnement + ajout responsive mobile

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,6 +4,9 @@
     margin-top: 15px;
     &__logo {
         height: 2.5rem;
+        @include breakpoints_mobile {
+            height: 1.6rem;
+        }
     }
     &__fleche-retour {
         color: $color-black;
