--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -1,22 +1,33 @@
+/*Présentation*/
 .présentation {
     @include flexbox;
     flex-direction: column;
     background-color: $color-background;
     padding: 40px 0px 50px 0px;
     &__titre {
-        margin-bottom: 15px;
+        margin-bottom: 10px;
     }
     &__sous-titre {
-        font-weight: 250;
-        @include font-18px;
+        font-weight: 295;
+        font-size: 18px;
+        @include breakpoints_mobile {
+            font-size: 17px;
+            width: 90%;
+        }
     }
 }
 
+/*Fonctionnement*/
 .fonctionnement {
     margin-top: 50px;
 &__choix {
     @include flexbox;
     flex-direction: row;
+        @include breakpoints_mobile {
+            @include flexbox;
+            flex-direction: column;
+            margin-left: 10px;
+        }
 }
 &__étape {
     background: $color-background;
@@ -30,33 +41,144 @@
     z-index: 1;
     cursor: pointer;
     box-shadow:0px 5px 10px $color-light-gray;
-    transition: transform 300ms, background-color 300ms;
+    transition: transform 400ms, background-color 200ms;
+        @include breakpoints_mobile {
+            width: 90%;
+            margin: 12px 0px 12px 0px;
+            padding: 1.4rem;
+        }
     & span {
-        width: 1.7em;
-        height: 1.7em;
-        font-size: 0.8em;
+        width: 1.7rem;
+        height: 1.7rem;
+        font-size: 0.8rem;
         text-align: center;
         color: $color-white;
         background-color: $color-primaire;
-        padding: 0.3em ;
+        padding: 0.4rem ;
         border-radius: 50%;
         position: absolute;
-        top: -0.9em;   
+        top: -0.9rem;   
+            @include breakpoints_mobile {
+                left: -0.8rem;
+                margin-top: 45px;
+                width: 1.4rem;
+                height: 1.4rem;
+                font-size: 0.7rem;
+                padding: 0.3rem;
+                top: -1.4rem;
+            }
     }
     & i {
         color: $color-icons-fonctionnement;
         font-size: 22px;
         margin-right: 20px;
+        @include breakpoints_mobile {
+            margin-right: 20px;
+            margin-left: -20px;
+            font-size: 18px;
+        }
     }
     & p {
+        font-size: 18px;
         font-weight: 500;
+        @include breakpoints_mobile {
+            font-size: 15px;
+        }
     }
     &:hover {
         background: lighten($color-primaire, 35%);
         transform: scale(1.05);
+        @include breakpoints_mobile {
+            transform: none;
+        }
         & i {
             color: $color-primaire;
         }
     }
 }
+}
+
+/*Restaurants*/
+.restaurants {
+	background: $color-background;
+	padding: 3rem 0rem 2rem 0rem;
+    margin-top: 50px;
+	&__cartes {
+		margin-top: 20px;
+		.listes_restaurants {
+			color: $color-black;
+			height: 290px;
+			background: $color-white;
+			margin-bottom: 25px;
+			border-radius: 15px;
+			transition: transform 500ms;
+			position: relative;
+			box-shadow: 0px 5px 18px -7px $color-shadow;
+            @include breakpoints_mobile {
+                margin-right: 10px;
+                margin-left: 10px;
+                height: 210px;
+            }
+			&:hover {
+				transform: scale(1.05);
+                @include breakpoints_mobile {
+                    transform: none;
+                }
+			}
+		}
+		img {
+			width: 100%;
+			height: 205px;
+			object-fit: cover;
+			border-top-left-radius: 15px;
+			border-top-right-radius: 15px;
+			object-position: 50% 65%;
+            @include breakpoints_mobile {
+                height: 140px;
+            }
+		}
+		.déscription_restaurants {
+			position: relative;
+            @include breakpoints_mobile {
+                margin-top: 10px;
+                margin-left: 10px;
+            }
+			p {
+				margin-top: 5px;
+				font-size: 1.1rem;
+				font-weight: 300;
+                @include breakpoints_mobile {
+                    font-size: 0.9rem;
+                }
+			}
+			.fa-heart {
+				position: absolute;
+				font-size: 1.6rem;
+				right: 20px;
+				top: 20px;
+				transition: color 600ms linear;
+                @include breakpoints_mobile {
+                    font-size: 1.3rem;
+                    top: 5px;
+                }
+				&:hover {
+					@include coeur;
+				}
+			}
+			h4 {
+				position: absolute;
+				background: $color-tertiaire;
+				padding: 5px 12px 5px 12px;
+				right: 10px;
+                margin-top: 5px;
+                margin-right: 3px;
+				top: -200px;
+				color: darken($color-tertiaire, 35%);
+				font-weight: bold;
+                @include breakpoints_mobile {
+                    top: -148px;
+                }
+			}
+		}
+	}
 }
