--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,29 +1,36 @@
 .footer {
-    @include flexbox;
+    display: flex;
     flex-direction: column;
-	background-color: $color-footer;
-    padding: 40px 0px 60px 0px;
-    margin-top: 200px;
+	background-color: $color-nuit;
+    padding: 25px 0px 20px 0px;
 	&__logo {
-		height: 2.5rem;
-		margin-bottom: 80px;
+		height: 1.3rem;
+		margin-bottom: 20px;
+        margin-left: 20px;
+        @include breakpoints_mobile {
+            height: 1rem;
+        }
 	}
 	}
 
 .liste {
-    @include flexbox;
-    flex-direction: row;
-    flex-wrap: wrap;
-	padding-bottom: 10px;
-    margin-left: 130px;
+    display: flex;
+    flex-direction: column;
     &__footer {
         color: $color-white;
-        margin-right: 130px;
-        font-size: 1.1rem;
+        margin-left: 20px;
+        margin-bottom: 10px;
+        font-size: 1rem;
+        @include breakpoints_mobile {
+            font-size: 0.9rem;
+        }
     }
 }
 
 .fa-utensils, .fa-hands-helping {
-    margin-right: 13px;
-    font-size: 1rem;
+    margin-right: 10px;
+    font-size: 0.9rem;
+    @include breakpoints_mobile {
+        font-size: 0.8rem;
+    }
 }
