--- a/sass/layout/_form.scss
+++ b/sass/layout/_form.scss
@@ -1,22 +1,27 @@
 .formulaire {
     @include flexbox;
     background: $background-form;
-    @include height-3rem;
-    margin-top: 10px;
-}
-
-input:disabled {
-    background: transparent;
-    border: transparent;
-    @include height-3rem;
-    cursor: text;
-    &::placeholder {
-        color: $color-black;
-        @include font-18px;
+    height: 3rem;
+    input:disabled {
+        background: transparent;
+        border: transparent;
+        height: 3rem;
+        cursor: text;
+        &::placeholder {
+            color: $color-black;
+            font-size: 18px;
+            @include breakpoints_mobile {
+                font-size: 14px;
+            }
+        }
     }
 }
 
 .fa-map-marker-alt {
-    margin-right: 20px;
+    margin-right: 15px;
     margin-bottom: 5px;
+    @include breakpoints_mobile {
+        margin-bottom: 3px;
+        font-size: 15px;
+    }
 }
