--- a/sass/main.scss
+++ b/sass/main.scss
@@ -22,6 +22,18 @@ a {
     text-decoration: none;
 }
 
+h1 {
+    width: 70%;
+    font-size: 1.4rem;
+    font-weight: 600;
+}
+
 h2 {
-	@include flexbox;
+    font-size: 22px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+}
+
+h3 {
+    font-size: 16px;
 }
