--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,9 +3,9 @@
     height: 2.5rem;
     margin-top: 15px;
     &__logo {
-        height: 2.5rem;
-        @include breakpoints_mobile {
-            height: 1.6rem;
+        height: 1.6rem;
+        @include breakpoints_desktop {
+            height: 2rem;
         }
     }
     &__fleche-retour {
