--- a/sass/composants/_buttons.scss
+++ b/sass/composants/_buttons.scss
@@ -1,25 +1,20 @@
 .btn {
-    font-size: 16px;
-    width: 14rem;
+    font-size: 14px;
+    width: 12rem;
     border: none;
     border-radius: 30px;
-    padding: 1rem;
+    padding: 0.9rem;
     color: $color-white;
     background: linear-gradient($color-secondaire, $color-primaire);
     box-shadow: 0px 5px 10px $color-shadow;
     margin: 1.6rem auto 0 auto;
     cursor: pointer;
     transition: transform 300ms, background-color 300ms;
-    @include breakpoints_mobile {
-        width: 12rem;
-        font-size: 14px;
-        padding: 0.9rem;
-    }
         &:hover {
         filter: brightness(1.1);
-        transform: scale(1.05);
-            @include breakpoints_mobile {
-                transform: none;
+        transform: none;
+            @include breakpoints_desktop {
+                transform: scale(1.05);
             }
         }
 }
