--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,11 +4,11 @@
 	background-color: $color-nuit;
     padding: 25px 0px 20px 0px;
 	&__logo {
-		height: 1.3rem;
+		height: 1rem;
 		margin-bottom: 20px;
         margin-left: 20px;
-        @include breakpoints_mobile {
-            height: 1rem;
+        @include breakpoints_desktop {
+            height: 1.3rem;
         }
 	}
 	}
@@ -20,17 +20,17 @@
         color: $color-white;
         margin-left: 20px;
         margin-bottom: 10px;
-        font-size: 1rem;
-        @include breakpoints_mobile {
-            font-size: 0.9rem;
+        font-size: 0.9rem;
+        @include breakpoints_desktop {
+            font-size: 1rem;
         }
     }
 }
 
 .fa-utensils, .fa-hands-helping {
     margin-right: 10px;
-    font-size: 0.9rem;
-    @include breakpoints_mobile {
-        font-size: 0.8rem;
+    font-size: 0.8rem;
+    @include breakpoints_desktop {
+        font-size: 0.9rem;
     }
 }
