--- a/sass/layout/_form.scss
+++ b/sass/layout/_form.scss
@@ -9,19 +9,20 @@
         cursor: text;
         &::placeholder {
             color: $color-black;
-            font-size: 18px;
-            @include breakpoints_mobile {
-                font-size: 14px;
+            font-size: 14px;
+            @include breakpoints_desktop {
+                font-size: 16px;
             }
         }
     }
 }
 
 .fa-map-marker-alt {
-    margin-right: 15px;
-    margin-bottom: 5px;
-    @include breakpoints_mobile {
-        margin-bottom: 3px;
-        font-size: 15px;
+    font-size: 15px;
+    margin-bottom: 3px;
+    margin-right: 10px;
+    @include breakpoints_desktop {
+        margin-bottom: 5px;
+        margin-right: 15px;
     }
 }
