--- a/sass/main.scss
+++ b/sass/main.scss
@@ -32,6 +32,9 @@ h2 {
     font-size: 22px;
     margin-bottom: 10px;
     margin-left: 10px;
+    @include breakpoints_desktop {
+        @include flexbox;
+    }
 }
 
 h3 {
