--- a/style.css
+++ b/style.css
@@ -9,11 +9,11 @@
   margin-top: 15px;
 }
 .header__logo {
-  height: 2.5rem;
+  height: 1.6rem;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 1024px) {
   .header__logo {
-    height: 1.6rem;
+    height: 2rem;
   }
 }
 .header__fleche-retour {
@@ -40,22 +40,23 @@
 }
 .formulaire input:disabled::placeholder {
   color: black;
-  font-size: 18px;
+  font-size: 14px;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 1024px) {
   .formulaire input:disabled::placeholder {
-    font-size: 14px;
+    font-size: 16px;
   }
 }
 
 .fa-map-marker-alt {
-  margin-right: 15px;
-  margin-bottom: 5px;
+  font-size: 15px;
+  margin-bottom: 3px;
+  margin-right: 10px;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 1024px) {
   .fa-map-marker-alt {
-    margin-bottom: 3px;
-    font-size: 15px;
+    margin-bottom: 5px;
+    margin-right: 15px;
   }
 }
 
@@ -74,12 +75,12 @@
 }
 .présentation__sous-titre {
   font-weight: 295;
-  font-size: 18px;
+  font-size: 17px;
+  width: 90%;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 1024px) {
   .présentation__sous-titre {
-    font-size: 17px;
-    width: 90%;
+    font-size: 18px;
   }
 }
 
@@ -92,15 +93,11 @@
   justify-content: center;
   text-align: center;
   align-items: center;
-  flex-direction: row;
+  flex-direction: column;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 1024px) {
   .fonctionnement__choix {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    flex-direction: column;
+    flex-direction: row;
     margin-left: 10px;
   }
 }
@@ -110,75 +107,51 @@
   justify-content: center;
   text-align: center;
   align-items: center;
-  width: 28%;
+  width: 90%;
   border: none;
   border-radius: 20px;
-  margin: 30px;
+  margin: 12px 0px 12px 0px;
   position: relative;
-  padding: 1.8rem;
-  z-index: 1;
+  padding: 1.4rem;
   cursor: pointer;
   box-shadow: 0px 5px 10px #E2E2E2;
-  transition: transform 400ms, background-color 200ms;
+  transition: transform 400ms, background-color 300ms;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 1024px) {
   .fonctionnement__étape {
-    width: 90%;
-    margin: 12px 0px 12px 0px;
-    padding: 1.4rem;
+    width: 28%;
+    margin: 30px;
+    padding: 1.8rem;
   }
 }
 .fonctionnement__étape span {
-  width: 1.7rem;
-  height: 1.7rem;
-  font-size: 0.8rem;
+  width: 1.4rem;
+  height: 1.4rem;
+  font-size: 0.7rem;
   text-align: center;
   color: white;
   background-color: #9356DC;
-  padding: 0.4rem;
+  padding: 0.3rem;
   border-radius: 50%;
   position: absolute;
-  top: -0.9rem;
-}
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  .fonctionnement__étape span {
-    left: -0.8rem;
-    margin-top: 45px;
-    width: 1.4rem;
-    height: 1.4rem;
-    font-size: 0.7rem;
-    padding: 0.3rem;
-    top: -1.4rem;
-  }
+  left: -0.8rem;
 }
 .fonctionnement__étape i {
   color: #7D7D7D;
-  font-size: 22px;
+  font-size: 18px;
   margin-right: 20px;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  .fonctionnement__étape i {
-    margin-right: 20px;
-    margin-left: -20px;
-    font-size: 18px;
-  }
-}
 .fonctionnement__étape p {
-  font-size: 18px;
+  font-size: 15px;
   font-weight: 500;
-}
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  .fonctionnement__étape p {
-    font-size: 15px;
-  }
 }
 .fonctionnement__étape:hover {
   background: #f2eafb;
-  transform: scale(1.05);
+  transform: none;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 1024px) {
   .fonctionnement__étape:hover {
-    transform: none;
+    transform: scale(1.05);
   }
 }
 .fonctionnement__étape:hover i {
@@ -191,81 +164,94 @@
   padding: 3rem 0rem 2rem 0rem;
   margin-top: 50px;
 }
+@media screen and (min-width: 768px) {
+  .restaurants {
+    padding: 3rem 0rem 2.5rem 0rem;
+  }
+}
 .restaurants__cartes {
   margin-top: 20px;
 }
+@media screen and (min-width: 768px) {
+  .restaurants__cartes {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: -5px;
+  }
+}
 .restaurants__cartes .listes_restaurants {
-  color: black;
-  height: 290px;
+  flex: 1 1 40%;
+  height: 220px;
   background: white;
   margin-bottom: 25px;
   border-radius: 15px;
   transition: transform 500ms;
   position: relative;
   box-shadow: 0px 5px 18px -7px #BBB;
+  margin-right: 15px;
+  margin-left: 15px;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 768px) {
   .restaurants__cartes .listes_restaurants {
-    margin-right: 10px;
-    margin-left: 10px;
-    height: 210px;
+    height: 230px;
+    margin: 15px;
   }
 }
-.restaurants__cartes .listes_restaurants:hover {
-  transform: scale(1.05);
-}
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 1024px) {
+  .restaurants__cartes .listes_restaurants {
+    height: 290px;
+    margin: 20px;
+  }
   .restaurants__cartes .listes_restaurants:hover {
-    transform: none;
+    transform: scale(1.02);
   }
 }
 .restaurants__cartes img {
   width: 100%;
-  height: 205px;
+  height: 150px;
   object-fit: cover;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
   object-position: 50% 65%;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 768px) {
   .restaurants__cartes img {
-    height: 140px;
+    height: 160px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .restaurants__cartes img {
+    height: 220px;
   }
 }
 .restaurants__cartes .déscription_restaurants {
   position: relative;
-}
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  .restaurants__cartes .déscription_restaurants {
-    margin-top: 10px;
-    margin-left: 10px;
-  }
+  color: black;
+  margin-left: 15px;
+  margin-top: 10px;
 }
 .restaurants__cartes .déscription_restaurants p {
   margin-top: 5px;
-  font-size: 1.1rem;
+  font-size: 0.9rem;
   font-weight: 300;
-}
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  .restaurants__cartes .déscription_restaurants p {
-    font-size: 0.9rem;
-  }
 }
 .restaurants__cartes .déscription_restaurants .fa-heart {
   position: absolute;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   right: 20px;
-  top: 20px;
+  top: 10px;
   transition: color 600ms linear;
-}
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  .restaurants__cartes .déscription_restaurants .fa-heart {
-    font-size: 1.3rem;
-    top: 5px;
-  }
 }
 .restaurants__cartes .déscription_restaurants .fa-heart:hover {
   background: linear-gradient(#9356DC, #FF79DA);
+  background: -webkit-linear-gradient(#9356DC, #FF79DA);
+  background: -moz-linear-gradient(#9356DC, #FF79DA);
+  background-clip: text;
+  -moz-background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  font-weight: 600;
 }
 .restaurants__cartes .déscription_restaurants h4 {
   position: absolute;
@@ -273,14 +259,18 @@
   padding: 5px 12px 5px 12px;
   right: 10px;
   margin-top: 5px;
-  margin-right: 3px;
-  top: -200px;
+  top: -160px;
   color: #2c9c81;
   font-weight: bold;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 768px) {
   .restaurants__cartes .déscription_restaurants h4 {
-    top: -148px;
+    top: -170px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .restaurants__cartes .déscription_restaurants h4 {
+    top: -230px;
   }
 }
 
@@ -291,13 +281,13 @@
   padding: 25px 0px 20px 0px;
 }
 .footer__logo {
-  height: 1.3rem;
+  height: 1rem;
   margin-bottom: 20px;
   margin-left: 20px;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 1024px) {
   .footer__logo {
-    height: 1rem;
+    height: 1.3rem;
   }
 }
 
@@ -309,30 +299,30 @@
   color: white;
   margin-left: 20px;
   margin-bottom: 10px;
-  font-size: 1rem;
+  font-size: 0.9rem;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 1024px) {
   .liste__footer {
-    font-size: 0.9rem;
+    font-size: 1rem;
   }
 }
 
 .fa-utensils, .fa-hands-helping {
   margin-right: 10px;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 1024px) {
   .fa-utensils, .fa-hands-helping {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
   }
 }
 
 .btn {
-  font-size: 16px;
-  width: 14rem;
+  font-size: 14px;
+  width: 12rem;
   border: none;
   border-radius: 30px;
-  padding: 1rem;
+  padding: 0.9rem;
   color: white;
   background: linear-gradient(#FF79DA, #9356DC);
   box-shadow: 0px 5px 10px #BBB;
@@ -340,20 +330,13 @@
   cursor: pointer;
   transition: transform 300ms, background-color 300ms;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  .btn {
-    width: 12rem;
-    font-size: 14px;
-    padding: 0.9rem;
-  }
-}
 .btn:hover {
   filter: brightness(1.1);
-  transform: scale(1.05);
+  transform: none;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 1024px) {
   .btn:hover {
-    transform: none;
+    transform: scale(1.05);
   }
 }
 
@@ -381,6 +364,14 @@ h2 {
   font-size: 22px;
   margin-bottom: 10px;
   margin-left: 10px;
+}
+@media screen and (min-width: 1024px) {
+  h2 {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+  }
 }
 
 h3 {
