--- a/sass/layout/_form.scss
+++ b/sass/layout/_form.scss
@@ -3,6 +3,7 @@
     background: $background-form;
     height: 3rem;
     input:disabled {
+        @include flexbox;
         background: transparent;
         border: transparent;
         height: 3rem;
@@ -21,7 +22,6 @@
     @include flexbox;
     font-size: 15px;
     margin-bottom: 3px;
-    margin-right: 10px;
     @include breakpoints_desktop {
         margin-bottom: 5px;
         margin-right: 15px;
