--- a/style.css
+++ b/style.css
@@ -33,6 +33,10 @@
   height: 3rem;
 }
 .formulaire input:disabled {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
   background: transparent;
   border: transparent;
   height: 3rem;
@@ -55,7 +59,6 @@
   align-items: center;
   font-size: 15px;
   margin-bottom: 3px;
-  margin-right: 10px;
 }
 @media screen and (min-width: 1024px) {
   .fa-map-marker-alt {
