--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -25,7 +25,12 @@
     flex-direction: column;
         @include breakpoints_desktop {
             flex-direction: row;
+            flex-wrap: nowrap !important;
             margin-left: 10px;
+        }
+        @include breakpoints_tablette {
+            flex-direction: row;
+            flex-wrap: wrap;
         }
 }
 &__étape {
@@ -39,11 +44,15 @@
     padding: 1.4rem;
     cursor: pointer;
     box-shadow:0px 5px 10px $color-light-gray;
-    transition: transform 400ms, background-color 300ms;
+    transition: transform 500ms, background-color 400ms;
         @include breakpoints_desktop {
             width: 28%;
             margin: 30px;
             padding: 1.8rem;
+        }
+        @include breakpoints_tablette {
+            width: 35%;
+            margin: 20px;
         }
     & span {
         width: 1.4rem;
@@ -55,7 +64,7 @@
         padding: 0.3rem ;
         border-radius: 50%;
         position: absolute;
-        left: -0.8rem; 
+        left: -0.7rem; 
     }
     & i {
         color: $color-icons-fonctionnement;
@@ -138,21 +147,28 @@
       color: $color-black;
       margin-left: 15px;
       margin-top: 10px;
-			p {
+			& p {
 				margin-top: 5px;
 				font-size: 0.9rem;
 				font-weight: 300;
 			}
-			.fa-heart {
-				position: absolute;
-				font-size: 1.4rem;
-				right: 20px;
-				top: 10px;
-				transition: color 600ms linear;
-				&:hover {
-					@include coeur;
-				}
-			}
+      &__coeur {
+        position: absolute;
+        font-size: 1.4rem;
+        right: 20px;
+        top: 170px;
+        transition: color 600ms linear;
+        cursor: pointer;
+        &:hover {
+          @include coeur;
+        }
+        @include breakpoints_tablette {
+          top: 180px;
+        }
+        @include breakpoints_desktop {
+          top: 240px;
+        }
+      }
 			h4 {
 				position: absolute;
 				background: $color-tertiaire;
@@ -162,13 +178,13 @@
 				top: -160px;
 				color: darken($color-tertiaire, 35%);
 				font-weight: bold;
-                @include breakpoints_tablette {
-                    top: -170px;
-                }
+              @include breakpoints_tablette {
+                top: -170px;
+              }
                 @include breakpoints_desktop{
                   top: -230px;
-              }
-			}
-		}
-	}
+                }
+			      }
+		    }
+	  }
 }
