--- a/sass/layout/_form.scss
+++ b/sass/layout/_form.scss
@@ -3,9 +3,8 @@
     background: $background-form;
     height: 3rem;
     input:disabled {
-        @include flexbox;
         background: transparent;
-        border: transparent;
+        border: none;
         height: 3rem;
         cursor: text;
         &::placeholder {
@@ -17,13 +16,8 @@
         }
     }
 }
-
 .fa-map-marker-alt {
-    @include flexbox;
-    font-size: 15px;
+    font-size: 14px;
     margin-bottom: 3px;
-    @include breakpoints_desktop {
-        margin-bottom: 5px;
-        margin-right: 15px;
-    }
+    margin-right: 10px;
 }
