--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 .header__logo {
   height: 1.6rem;
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 992px) {
   .header__logo {
     height: 2rem;
   }
@@ -33,12 +33,8 @@
   height: 3rem;
 }
 .formulaire input:disabled {
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  align-items: center;
   background: transparent;
-  border: transparent;
+  border: none;
   height: 3rem;
   cursor: text;
 }
@@ -46,25 +42,16 @@
   color: black;
   font-size: 14px;
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 992px) {
   .formulaire input:disabled::placeholder {
     font-size: 16px;
   }
 }
 
 .fa-map-marker-alt {
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  align-items: center;
-  font-size: 15px;
+  font-size: 14px;
   margin-bottom: 3px;
-}
-@media screen and (min-width: 1024px) {
-  .fa-map-marker-alt {
-    margin-bottom: 5px;
-    margin-right: 15px;
-  }
+  margin-right: 10px;
 }
 
 /*Présentation*/
@@ -85,7 +72,7 @@
   font-size: 17px;
   width: 90%;
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 992px) {
   .présentation__sous-titre {
     font-size: 18px;
   }
@@ -102,10 +89,17 @@
   align-items: center;
   flex-direction: column;
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 992px) {
   .fonctionnement__choix {
     flex-direction: row;
+    flex-wrap: nowrap !important;
     margin-left: 10px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .fonctionnement__choix {
+    flex-direction: row;
+    flex-wrap: wrap;
   }
 }
 .fonctionnement__étape {
@@ -122,13 +116,19 @@
   padding: 1.4rem;
   cursor: pointer;
   box-shadow: 0px 5px 10px #E2E2E2;
-  transition: transform 400ms, background-color 300ms;
+  transition: transform 500ms, background-color 400ms;
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 992px) {
   .fonctionnement__étape {
     width: 28%;
     margin: 30px;
     padding: 1.8rem;
+  }
+}
+@media screen and (min-width: 768px) {
+  .fonctionnement__étape {
+    width: 35%;
+    margin: 20px;
   }
 }
 .fonctionnement__étape span {
@@ -141,7 +141,7 @@
   padding: 0.3rem;
   border-radius: 50%;
   position: absolute;
-  left: -0.8rem;
+  left: -0.7rem;
 }
 .fonctionnement__étape i {
   color: #7D7D7D;
@@ -156,7 +156,7 @@
   background: #f2eafb;
   transform: none;
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 992px) {
   .fonctionnement__étape:hover {
     transform: scale(1.05);
   }
@@ -205,7 +205,7 @@
     margin: 15px;
   }
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 992px) {
   .restaurants__cartes .listes_restaurants {
     height: 290px;
     margin: 20px;
@@ -227,7 +227,7 @@
     height: 160px;
   }
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 992px) {
   .restaurants__cartes img {
     height: 220px;
   }
@@ -243,14 +243,15 @@
   font-size: 0.9rem;
   font-weight: 300;
 }
-.restaurants__cartes .déscription_restaurants .fa-heart {
+.restaurants__cartes .déscription_restaurants__coeur {
   position: absolute;
   font-size: 1.4rem;
   right: 20px;
-  top: 10px;
+  top: 170px;
   transition: color 600ms linear;
+  cursor: pointer;
 }
-.restaurants__cartes .déscription_restaurants .fa-heart:hover {
+.restaurants__cartes .déscription_restaurants__coeur:hover {
   background: linear-gradient(#9356DC, #FF79DA);
   background: -webkit-linear-gradient(#9356DC, #FF79DA);
   background: -moz-linear-gradient(#9356DC, #FF79DA);
@@ -259,6 +260,16 @@
   -webkit-background-clip: text;
   color: transparent;
   font-weight: 600;
+}
+@media screen and (min-width: 768px) {
+  .restaurants__cartes .déscription_restaurants__coeur {
+    top: 180px;
+  }
+}
+@media screen and (min-width: 992px) {
+  .restaurants__cartes .déscription_restaurants__coeur {
+    top: 240px;
+  }
 }
 .restaurants__cartes .déscription_restaurants h4 {
   position: absolute;
@@ -275,7 +286,7 @@
     top: -170px;
   }
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 992px) {
   .restaurants__cartes .déscription_restaurants h4 {
     top: -230px;
   }
@@ -292,7 +303,7 @@
   margin-bottom: 20px;
   margin-left: 20px;
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 992px) {
   .footer__logo {
     height: 1.3rem;
   }
@@ -308,7 +319,7 @@
   margin-bottom: 10px;
   font-size: 0.9rem;
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 992px) {
   .liste__footer {
     font-size: 1rem;
   }
@@ -318,7 +329,7 @@
   margin-right: 10px;
   font-size: 0.8rem;
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 992px) {
   .fa-utensils, .fa-hands-helping {
     font-size: 0.9rem;
   }
@@ -341,7 +352,7 @@
   filter: brightness(1.1);
   transform: none;
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 992px) {
   .btn:hover {
     transform: scale(1.05);
   }
@@ -370,9 +381,9 @@ h1 {
 h2 {
   font-size: 22px;
   margin-bottom: 10px;
-  margin-left: 10px;
+  margin-left: 15px;
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 992px) {
   h2 {
     display: flex;
     justify-content: center;
