--- a/sass/layout/_form.scss
+++ b/sass/layout/_form.scss
@@ -3,6 +3,7 @@
     background: $background-form;
     height: 3rem;
     input:disabled {
+        @include flexbox;
         background: transparent;
         border: none;
         height: 3rem;
@@ -19,5 +20,4 @@
 .fa-map-marker-alt {
     font-size: 14px;
     margin-bottom: 3px;
-    margin-right: 10px;
 }
