--- a/sass/main.scss
+++ b/sass/main.scss
@@ -32,7 +32,7 @@ h2 {
     font-size: 22px;
     margin-bottom: 10px;
     margin-left: 15px;
-    @include breakpoints_desktop {
+    @include breakpoints_tablette {
         @include flexbox;
     }
 }
