--- a/style.css
+++ b/style.css
@@ -33,6 +33,10 @@
   height: 3rem;
 }
 .formulaire input:disabled {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
   background: transparent;
   border: none;
   height: 3rem;
@@ -51,7 +55,6 @@
 .fa-map-marker-alt {
   font-size: 14px;
   margin-bottom: 3px;
-  margin-right: 10px;
 }
 
 /*Présentation*/
@@ -298,14 +301,23 @@
   background-color: #353535;
   padding: 25px 0px 20px 0px;
 }
+@media screen and (min-width: 768px) {
+  .footer {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    padding: 50px;
+  }
+}
 .footer__logo {
   height: 1rem;
   margin-bottom: 20px;
   margin-left: 20px;
 }
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 768px) {
   .footer__logo {
-    height: 1.3rem;
+    height: 1.5rem;
   }
 }
 
@@ -313,13 +325,23 @@
   display: flex;
   flex-direction: column;
 }
+@media screen and (min-width: 768px) {
+  .liste {
+    flex-direction: row;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    margin-top: 20px;
+  }
+}
 .liste__footer {
   color: white;
   margin-left: 20px;
   margin-bottom: 10px;
   font-size: 0.9rem;
 }
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 768px) {
   .liste__footer {
     font-size: 1rem;
   }
@@ -383,7 +405,7 @@ h2 {
   margin-bottom: 10px;
   margin-left: 15px;
 }
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 768px) {
   h2 {
     display: flex;
     justify-content: center;
