--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -1,3 +1,48 @@
+/*Spinner*/
+.chargement {
+	  @include flexbox;
+	  position: fixed;
+	  top: 0;
+	  left: 0;
+	  right: 0;
+	  bottom: 0;
+	  width: 100%;
+	  height: 100%;
+	  -webkit-animation: chargement 7s forwards;
+	  -moz-animation: chargement 7s forwards;
+	  animation: chargement 5s forwards;
+  .rotation {
+		  width: 170px;
+		  height: 170px;
+		  border-radius: 50%;
+		  border: 6px solid transparent;
+		  position: absolute;
+	}
+	.logo_chargement {
+		  -webkit-animation: logo_chargement 3s forwards;
+		  -moz-animation: logo_chargement 3s forwards;
+		  animation: logo_chargement 3s forwards;
+	}
+	.color_primaire {
+		  border-top: 6px solid $color-primaire;
+		  -webkit-animation: rotation_1 3s ease-in-out forwards;
+		  -moz-animation: rotation_1 3s ease-in-out forwards;
+		  animation: rotation_1 3s ease-in-out forwards;
+	}
+	.color_secondaire {
+		  border-bottom: 6px solid $color-secondaire;
+		  -webkit-animation: rotation_2 3s ease-out forwards;
+		  -moz-animation: rotation_2 3s ease-out forwards;
+		  animation: rotation_2 3s ease-out forwards;
+	}
+	.color_tertiaire {
+	    border-left: 6px solid $color-tertiaire;
+		  -webkit-animation: rotation_3 3s ease-in forwards;
+		  -moz-animation: rotation_3 3s ease-in forwards;
+		  animation: rotation_3 3s ease-in forwards;
+	}
+}
+
 /*Présentation*/
 .présentation {
     @include flexbox;
