--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,42 +1,10 @@
-@import "./utils/mixins";
 @import "./utils/variables";
+@import "./utils/mixins";
+@import "./utils/keyframes";
 @import "./layout/header";
 @import "./layout/form";
 @import "./layout/container";
 @import "./layout/footer";
 @import "./composants/buttons";
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Shrikhand&display=swap');
-
-* {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-}
-
-body {
-    font-family: 'Roboto', sans-serif;
-}
-
-a {
-    text-decoration: none;
-}
-
-h1 {
-    width: 70%;
-    font-size: 1.4rem;
-    font-weight: 600;
-}
-
-h2 {
-    font-size: 22px;
-    margin-bottom: 10px;
-    margin-left: 15px;
-    @include breakpoints_tablette {
-        @include flexbox;
-    }
-}
-
-h3 {
-    font-size: 16px;
-}
+@import "./base/base";
+@import "./base/typography";
