--- a/style.css
+++ b/style.css
@@ -1,5 +1,252 @@
 @charset "UTF-8";
+/*Spinner*/
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Shrikhand&display=swap");
+@keyframes chargement {
+  0% {
+    background-color: black;
+    z-index: 1;
+  }
+  50% {
+    background-color: #EAEAEA;
+    z-index: 1;
+  }
+  90% {
+    z-index: 1;
+  }
+  100% {
+    background-color: transparent;
+    z-index: -1;
+  }
+}
+@-webkit-keyframes chargement {
+  0% {
+    background-color: black;
+    z-index: 1;
+  }
+  50% {
+    background-color: #EAEAEA;
+    z-index: 1;
+  }
+  90% {
+    z-index: 1;
+  }
+  100% {
+    background-color: transparent;
+    z-index: -1;
+  }
+}
+@-moz-keyframes chargement {
+  0% {
+    background-color: black;
+    z-index: 1;
+  }
+  50% {
+    background-color: #EAEAEA;
+    z-index: 1;
+  }
+  90% {
+    z-index: 1;
+  }
+  100% {
+    background-color: transparent;
+    z-index: -1;
+  }
+}
+@keyframes logo_chargement {
+  from {
+    transform: rotateY(0deg);
+  }
+  to {
+    transform: rotateY(360deg);
+  }
+  0% {
+    opacity: 1;
+  }
+  25%, 35% {
+    opacity: 0.3;
+  }
+  35%, 60% {
+    opacity: 1;
+  }
+  60%, 70% {
+    opacity: 0.3;
+  }
+  70%, 95% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@-webkit-keyframes logo_chargement {
+  from {
+    transform: rotateY(0deg);
+  }
+  to {
+    transform: rotateY(360deg);
+  }
+  0% {
+    opacity: 1;
+  }
+  25%, 35% {
+    opacity: 0.3;
+  }
+  35%, 60% {
+    opacity: 1;
+  }
+  60%, 70% {
+    opacity: 0.3;
+  }
+  70%, 95% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@-moz-keyframes logo_chargement {
+  from {
+    transform: rotateY(0deg);
+  }
+  to {
+    transform: rotateY(360deg);
+  }
+  0% {
+    opacity: 1;
+  }
+  25%, 35% {
+    opacity: 0.3;
+  }
+  35%, 60% {
+    opacity: 1;
+  }
+  60%, 70% {
+    opacity: 0.3;
+  }
+  70%, 95% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes rotation_1 {
+  0% {
+    opacity: 1;
+    transform: rotate(0turn);
+  }
+  85% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: rotate(3turn);
+  }
+}
+@-webkit-keyframes rotation_1 {
+  0% {
+    opacity: 1;
+    transform: rotate(0turn);
+  }
+  85% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: rotate(3turn);
+  }
+}
+@-moz-keyframes rotation_1 {
+  0% {
+    opacity: 1;
+    transform: rotate(0turn);
+  }
+  85% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: rotate(3turn);
+  }
+}
+@keyframes rotation_2 {
+  0% {
+    opacity: 1;
+    transform: rotate(0turn);
+  }
+  85% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: rotate(-3turn);
+  }
+}
+@-webkit-keyframes rotation_2 {
+  0% {
+    opacity: 1;
+    transform: rotate(0turn);
+  }
+  85% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: rotate(-3turn);
+  }
+}
+@-moz-keyframes rotation_2 {
+  0% {
+    opacity: 1;
+    transform: rotate(0turn);
+  }
+  85% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: rotate(-3turn);
+  }
+}
+@keyframes rotation_3 {
+  0% {
+    opacity: 1;
+    transform: rotate(0turn);
+  }
+  85% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: rotate(-3turn);
+  }
+}
+@-webkit-keyframes rotation_3 {
+  0% {
+    opacity: 1;
+    transform: rotate(0turn);
+  }
+  85% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: rotate(-3turn);
+  }
+}
+@-moz-keyframes rotation_3 {
+  0% {
+    opacity: 1;
+    transform: rotate(0turn);
+  }
+  85% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: rotate(-3turn);
+  }
+}
 .header {
   display: flex;
   justify-content: center;
@@ -11,7 +258,7 @@
 .header__logo {
   height: 1.6rem;
 }
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 768px) {
   .header__logo {
     height: 2rem;
   }
@@ -32,15 +279,16 @@
   background: linear-gradient(#CBCBCB -1%, #EAEAEA 7%);
   height: 3rem;
 }
+.formulaire .fa-map-marker-alt {
+  font-size: 14px;
+  margin-left: 50px;
+}
 .formulaire input:disabled {
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  align-items: center;
   background: transparent;
   border: none;
   height: 3rem;
   cursor: text;
+  margin-left: 20px;
 }
 .formulaire input:disabled::placeholder {
   color: black;
@@ -52,9 +300,52 @@
   }
 }
 
-.fa-map-marker-alt {
-  font-size: 14px;
-  margin-bottom: 3px;
+/*Spinner*/
+.chargement {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  -webkit-animation: chargement 7s forwards;
+  -moz-animation: chargement 7s forwards;
+  animation: chargement 5s forwards;
+}
+.chargement .rotation {
+  width: 170px;
+  height: 170px;
+  border-radius: 50%;
+  border: 6px solid transparent;
+  position: absolute;
+}
+.chargement .logo_chargement {
+  -webkit-animation: logo_chargement 3s forwards;
+  -moz-animation: logo_chargement 3s forwards;
+  animation: logo_chargement 3s forwards;
+}
+.chargement .color_primaire {
+  border-top: 6px solid #9356DC;
+  -webkit-animation: rotation_1 3s ease-in-out forwards;
+  -moz-animation: rotation_1 3s ease-in-out forwards;
+  animation: rotation_1 3s ease-in-out forwards;
+}
+.chargement .color_secondaire {
+  border-bottom: 6px solid #FF79DA;
+  -webkit-animation: rotation_2 3s ease-out forwards;
+  -moz-animation: rotation_2 3s ease-out forwards;
+  animation: rotation_2 3s ease-out forwards;
+}
+.chargement .color_tertiaire {
+  border-left: 6px solid #99E2D0;
+  -webkit-animation: rotation_3 3s ease-in forwards;
+  -moz-animation: rotation_3 3s ease-in forwards;
+  animation: rotation_3 3s ease-in forwards;
 }
 
 /*Présentation*/
