--- a/sass/composants/_buttons.scss
+++ b/sass/composants/_buttons.scss
@@ -1,3 +1,4 @@
+/*Button Explorer et Commande*/
 .btn {
     font-size: 14px;
     width: 12rem;
@@ -12,9 +13,10 @@
     transition: transform 300ms, background-color 300ms;
         &:hover {
         filter: brightness(1.1);
+        box-shadow: 0px 5px 10px $color-nuit;
         transform: none;
             @include breakpoints_desktop {
                 transform: scale(1.05);
             }
         }
-    }
+    }/*Fin de Button Explorer et Commande*/
