--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -41,7 +41,7 @@
 		  -moz-animation: rotation_3 3s ease-in forwards;
 		  animation: rotation_3 3s ease-in forwards;
 	}
-}
+}/*Fin de spinner*/
 
 /*Présentation*/
 .présentation {
@@ -60,7 +60,7 @@
             font-size: 18px;
         }
     }
-}
+}/*Fin de Présentation*/
 
 /*Fonctionnement*/
 .fonctionnement {
@@ -131,9 +131,9 @@
         }
     }
   }
-}
+}/*Fin de Fonctionnement*/
 
-/*Restaurants*/
+/*Cartes Restaurants*/
 .restaurants {
 	background: $color-background;
 	padding: 3rem 0rem 2rem 0rem;
@@ -214,7 +214,7 @@
           top: 240px;
         }
       }
-			h4 {
+			& small {
 				position: absolute;
 				background: $color-tertiaire;
 				padding: 5px 12px 5px 12px;
@@ -232,4 +232,4 @@
 			      }
 		    }
 	  }
-}
+}/*Fin de Cartes Restaurants*/
