--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,7 +4,6 @@
 	background-color: $color-nuit;
     padding: 25px 0px 20px 0px;
     @include breakpoints_tablette {
-        @include flexbox;
         padding: 50px;
     }
 	&__logo {
@@ -13,17 +12,18 @@
         margin-left: 20px;
         @include breakpoints_tablette {
             height: 1.5rem;
+            margin-left: 0px;
         }
 	}
-	}
+}
 
 .liste {
     display: flex;
     flex-direction: column;
     @include breakpoints_tablette {
         flex-direction: row;
-        @include flexbox;
         margin-top: 20px;
+        justify-content: space-between;
     }
     &__footer {
         color: $color-white;
@@ -32,6 +32,7 @@
         font-size: 0.9rem;
         @include breakpoints_tablette {
             font-size: 1rem;
+            margin-left: 0px;
         }
     }
 }
