--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -21,10 +21,14 @@
           font-size: 26px;
           margin-top: 10px;
           margin-left: 20px;
+          margin-bottom: -10px;
           @include breakpoints_tablette {
-              margin-left: 90px;
-              margin-bottom: 10px;
+              margin-left: 20px;
+              margin-bottom: 0px;
               font-size: 30px;
+          }
+          @include breakpoints_desktop {
+              margin-left: 45px;
           }
       }
       & .coeur {
@@ -38,8 +42,10 @@
             @include coeur;
           }
           @include breakpoints_tablette {
-            right: 90px;
             font-size: 30px;
+          }
+          @include breakpoints_desktop {
+            right: 50px;
           }
       }
   }
@@ -52,7 +58,7 @@
     justify-content: space-evenly;
   }
   & h3 {
-      margin: 20px 0px 15px 20px;
+      margin: 40px 0px 15px 20px;
       font-weight: 400;
       border-bottom: 3px solid $color-tertiaire;
       width: 40px;
@@ -84,8 +90,15 @@
     &:hover .fa-check-circle {
       transform: rotate(360deg);
       transition-duration: 800ms;
-      width: 60px;
-      transition-duration: 1200ms;
+    }
+    &.animation_1 {
+      animation: délais 1s ease-in-out;
+    }
+    &.animation_2 {
+      animation: délais 2s ease-in-out;
+    }
+    &.animation_3 {
+      animation: délais 3s ease-in-out;
     }
     &__listes {
       white-space: nowrap;
@@ -127,7 +140,7 @@
     }
   }
 
-  /*Survol Slide*/
+  /*Survol Selection d'un plat*/
   .menu:hover .slide__check-circle {
     width: 60px;
     transition-duration: 1200ms;
@@ -136,4 +149,5 @@
   .commande {
     @include flexbox;
     padding: 5px 0px 0 0;
+    animation: btn 3s ease-in-out;
   }
