--- a/style.css
+++ b/style.css
@@ -248,6 +248,70 @@
   }
 }
 /*Fin de Spinner*/
+/*Apparition Progressive Page Menu*/
+@keyframes délais {
+  0% {
+    opacity: 0;
+    transform: translateY(15%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+}
+@-webkit-keyframes délais {
+  0% {
+    opacity: 0;
+    transform: translateY(15%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+}
+@-moz-keyframes délais {
+  0% {
+    opacity: 0;
+    transform: translateY(15%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+}
+/*Fin d'Apparition Progressive Page Menu*/
+/*Apparition Progressive Button Commande*/
+@keyframes btn {
+  from {
+    opacity: 0%;
+    width: 0%;
+  }
+  to {
+    opacity: 100%;
+    width: 100%;
+  }
+}
+@-webkit-keyframes btn {
+  from {
+    opacity: 0%;
+    width: 0%;
+  }
+  to {
+    opacity: 100%;
+    width: 100%;
+  }
+}
+@-moz-keyframes btn {
+  from {
+    opacity: 0%;
+    width: 0%;
+  }
+  to {
+    opacity: 100%;
+    width: 100%;
+  }
+}
+/*Fin d'Apparition Progressive Button Commande*/
 .header {
   display: flex;
   justify-content: center;
@@ -737,12 +801,18 @@ h3 {
   font-size: 26px;
   margin-top: 10px;
   margin-left: 20px;
+  margin-bottom: -10px;
 }
 @media screen and (min-width: 768px) {
   .restaurant h5 {
-    margin-left: 90px;
-    margin-bottom: 10px;
+    margin-left: 20px;
+    margin-bottom: 0px;
     font-size: 30px;
+  }
+}
+@media screen and (min-width: 992px) {
+  .restaurant h5 {
+    margin-left: 45px;
   }
 }
 .restaurant .coeur {
@@ -765,8 +835,12 @@ h3 {
 }
 @media screen and (min-width: 768px) {
   .restaurant .coeur {
-    right: 90px;
     font-size: 30px;
+  }
+}
+@media screen and (min-width: 992px) {
+  .restaurant .coeur {
+    right: 50px;
   }
 }
 
@@ -779,7 +853,7 @@ h3 {
   }
 }
 .catégorie h3 {
-  margin: 20px 0px 15px 20px;
+  margin: 40px 0px 15px 20px;
   font-weight: 400;
   border-bottom: 3px solid #99E2D0;
   width: 40px;
@@ -812,8 +886,15 @@ h3 {
 .menu:hover .fa-check-circle {
   transform: rotate(360deg);
   transition-duration: 800ms;
-  width: 60px;
-  transition-duration: 1200ms;
+}
+.menu.animation_1 {
+  animation: délais 1s ease-in-out;
+}
+.menu.animation_2 {
+  animation: délais 2s ease-in-out;
+}
+.menu.animation_3 {
+  animation: délais 3s ease-in-out;
 }
 .menu__listes {
   white-space: nowrap;
@@ -857,7 +938,7 @@ h3 {
   height: 100%;
 }
 
-/*Survol Slide*/
+/*Animation Selection d'un plat*/
 .menu:hover .slide__check-circle {
   width: 60px;
   transition-duration: 1200ms;
@@ -869,4 +950,5 @@ h3 {
   text-align: center;
   align-items: center;
   padding: 5px 0px 0 0;
+  animation: btn 3s ease-in-out;
 }
